v3.7.1-rc.1 (XXXX-XX-XX)
------------------------

* Correct some log entries.

* Allow changing collection properties for smart edge collections as well. 
  Previously, collection property changes for smart edge collections were not
  propagated.

* Fixed BTS-110: Fulltext index with minLength <= 0 not allowed.

* Web UI: Removed unnecessary menubar entry in case of database node inspection.

* Adjust arangodump integration test to desired behavior, and make sure
  arangodump behaves as specified when invoking it with non-existing
  collections.

* Disallow using V8 dependent functions in SEARCH statement.

* Remove superflous `%>` output in the UI modal dialog in case the JSON editor
  was embedded.

* The Web UI now displays an error message inside the node information view in
  case the user has no access to retrieve the neccessary information.

* The `_from` and `_to` attributes of an edge document can now be edited from
  within the UI.

* Fixed a misleading error message in AQL.

* Fixed issue ES-609: "Transaction already in use" error when running
  transaction.
  Added option `--transaction.streaming-lock-timeout` to control the timeout in
  seconds in case of parallel access to a streaming transaction.

* Fixed internal issue BTS-107, offset over the main query passed through a
  subquery which has modification access to shards could yield incorrect
  results, if shards are large enough and skipping was large enough, both to
  overflow the batch-size in AQL for each shard individually.

  The following query would be affected:

  FOR x IN 1..100
  LET sub = (
    FOR y IN Collection
    UPDATE y WITH {updated: true} IN Collection
    RETURN new
  )
  LIMIT 5, 10
  REUTRN {x,sub}

  If a shard in Collection, has enough entries to fill a batch, the second shard
  could run into the issue that it actually does not skip the first 5 main
  queries, but reports their results in addition. This has the negative side